bidigraph: implement digraph with in and out transitions.
* configure.ac, src/Makefile.am: Update it.
* src/graph/Makefile.am, src/graph/bidigraph.cc, src/graph/bidigraph.hh,
src/graphtest/Makefile.am, src/graphtest/bidigraph.cc,
src/graphtest/bidigraph.test, src/graphtest/defs.in: New files.

--- a/configure.ac
+++ b/configure.ac
@@ -180,6 +180,9 @@ AC_CONFIG_FILES([
   src/eltlparse/Makefile
   src/eltltest/defs
   src/eltltest/Makefile
+  src/graph/Makefile
+  src/graphtest/defs
+  src/graphtest/Makefile
   src/kripke/Makefile
   src/ltlast/Makefile
   src/ltlenv/Makefile
