--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,10 +25,10 @@ AUTOMAKE_OPTIONS = subdir-objects
 # List directories in the order they must be built.  Keep tests at the
 # end, after building '.' (since the current directory contains
 # libspot.la needed by the tests)
-SUBDIRS = misc priv ltlenv ltlast ltlvisit ltlparse eltlparse tgba	\
-          tgbaalgos tgbaparse ta taalgos kripke saba sabaalgos		\
-          neverparse kripkeparse dstarparse . bin ltltest eltltest	\
-          tgbatest sabatest kripketest sanity
+SUBDIRS = misc priv ltlenv ltlast ltlvisit ltlparse eltlparse graph	\
+          tgba tgbaalgos tgbaparse ta taalgos kripke saba sabaalgos	\
+	  neverparse kripkeparse dstarparse . bin ltltest eltltest	\
+	  graphtest tgbatest sabatest kripketest sanity
 
 lib_LTLIBRARIES = libspot.la
 libspot_la_SOURCES =
@@ -36,6 +36,7 @@ libspot_la_LDFLAGS = $(BUDDY_LDFLAGS) -no-undefined
 libspot_la_LIBADD =  \
   dstarparse/libdstarparse.la \
   eltlparse/libeltlparse.la \
+  graph/libgraph.la \
   kripke/libkripke.la \
   kripkeparse/libkripkeparse.la \
   ltlast/libltlast.la \
