Import decomposition work from TACAS'13
* iface/dve2fasttgba/dve2check.cc: Wrapper for call.
* src/tgbaalgos/Makefile.am: Add new files.
* src/tgbaalgos/scc.hh: Add extra informations
* src/tgbaalgos/scc.cc: Compute extra informations.
* src/tgbaalgos/scc_decompose.hh: Headder for decomposition.
* src/tgbaalgos/scc_decompose.cc: Compute decomposition

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -66,6 +66,7 @@ tgbaalgos_HEADERS = \
   save.hh \
   sccfilter.hh \
   scc.hh \
+  scc_decompose.hh \
   se05.hh \
   simulation.hh \
   stats.hh \
@@ -114,6 +115,7 @@ libtgbaalgos_la_SOURCES = \
   safety.cc \
   save.cc \
   scc.cc \
+  scc_decompose.cc \
   sccfilter.cc \
   se05.cc \
   simulation.cc \
