Shared Open Set Data Structure.
We call by open set a set containing a lockfree queue and
a hashmap.

* src/fasttgbaalgos/ec/concur/Makefile.am: Add new files.
* src/fasttgbaalgos/ec/concur/open_set.c: C File implementation.
* src/fasttgbaalgos/ec/concur/open_set.h: C File header
* src/fasttgbaalgos/ec/concur/openset.hh: Wrapper for C files.

--- a/src/fasttgbaalgos/ec/concur/Makefile.am
+++ b/src/fasttgbaalgos/ec/concur/Makefile.am
@@ -31,7 +31,9 @@ concur_HEADERS =    \
    runtime.h	    \
    unionfind.h	    \
    user.h	    \
-   uf.hh
+   open_set.h	    \
+   uf.hh            \
+   openset.hh
 
 noinst_LTLIBRARIES = libconcur.la
 libconcur_la_SOURCES = \
@@ -39,4 +41,5 @@ libconcur_la_SOURCES = \
    fast_hash.c		 \
    hashtable.c		 \
    hre_malloc.c		 \
-   unionfind.c
+   unionfind.c           \
+   open_set.c
