fas: implement a feed-back arc set algorithm
* src/tgbaalgos/Makefile.am, src/tgbatest/Makefile.am: Update it.
* src/tgbaalgos/fas.cc, src/tgbaalgos/fas.hh, src/tgbatest/fas.cc,
src/tgbatest/fas.test: New files.

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -43,6 +43,7 @@ tgbaalgos_HEADERS = \
   eltl2tgba_lacim.hh \
   emptiness.hh \
   emptiness_stats.hh \
+  fas.hh \
   gv04.hh \
   isdet.hh \
   isweakscc.hh \
@@ -91,6 +92,7 @@ libtgbaalgos_la_SOURCES = \
   dupexp.cc \
   eltl2tgba_lacim.cc \
   emptiness.cc \
+  fas.cc \
   gv04.cc \
   isdet.cc \
   isweakscc.cc \
