Parallel weak emptiness check.
* src/fasttgbaalgos/ec/concur/Makefile.am: Add new file.
* src/fasttgbaalgos/ec/concur/sharedhashtable.hh: Shared Hashtable.
* src/fasttgbaalgos/ec/concur/hashtable.h: Iterate over keys header.
* src/fasttgbaalgos/ec/concur/hashtable.c: Implement it!
* src/fasttgbaalgos/tgba2fasttgba.cc: Track scc number.
* src/fasttgba/fasttgba_explicit.hh: New fields.
* src/fasttgbaalgos/ec/concurec/dead_share.hh: Weak Emptiness check.
* src/fasttgbaalgos/ec/concurec/dead_share.cc: Implement it.

--- a/src/fasttgbaalgos/ec/concur/Makefile.am
+++ b/src/fasttgbaalgos/ec/concur/Makefile.am
@@ -22,17 +22,18 @@ AM_CPPFLAGS =  -Wall -Werror -std=gnu99
 
 concurdir = $(pkgincludedir)/fasttgbaalgos/ec/concur
 
-concur_HEADERS =    \
-   MurmurHash3.h    \
-   atomics.h	    \
-   fast_hash.h	    \
-   feedback.h	    \
-   hashtable.h	    \
-   runtime.h	    \
-   unionfind.h	    \
-   user.h	    \
-   open_set.h	    \
-   uf.hh            \
+concur_HEADERS =        \
+   MurmurHash3.h        \
+   atomics.h	        \
+   fast_hash.h	        \
+   feedback.h	        \
+   hashtable.h	        \
+   runtime.h	        \
+   unionfind.h	        \
+   user.h	        \
+   open_set.h	        \
+   uf.hh                \
+   sharedhashtable.hh   \
    openset.hh
 
 noinst_LTLIBRARIES = libconcur.la
