--- a/src/tgba/Makefile.am
+++ b/src/tgba/Makefile.am
@@ -1,6 +1,6 @@
 ## -*- coding: utf-8 -*-
-## Copyright (C) 2009, 2010, 2011, 2012, 2013 Laboratoire de Recherche et
-## Développement de l'Epita (LRDE).
+## Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014 Laboratoire de
+## Recherche et Développement de l'Epita (LRDE).
 ## Copyright (C) 2003, 2004 Laboratoire d'Informatique de Paris 6 (LIP6),
 ## département Systèmes Répartis Coopératifs (SRC), Université Pierre
 ## et Marie Curie.
@@ -53,6 +53,7 @@ tgba_HEADERS = \
   tgbasafracomplement.hh \
   tgbatba.hh \
   tgbaunion.hh \
+  univmodel.hh \
   wdbacomp.hh
 
 noinst_LTLIBRARIES = libtgba.la
@@ -79,4 +80,5 @@ libtgba_la_SOURCES = \
   tgbasgba.cc \
   tgbatba.cc \
   tgbaunion.cc \
+  univmodel.cc \
   wdbacomp.cc
