ltlcross: Add new statistics for our Spin'14 paper.
* src/tgbaalgos/stats.cc, src/tgbaalgos/stats.hh (sub_stats_prefixtrim):
New function.
* src/bin/ltlcross.cc: Use it.
* src/tgbatest/univtrim.test: New file.
* src/tgbatest/Makefile.am: Add it.
* src/tgbatest/ltlcross3.test: Adjust to the new columns in CSV output.

--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -121,6 +121,7 @@ TESTS = \
   wdba2.test \
   babiak.test \
   ltlcross4.test \
+  univtrim.test \
   ltl2dstar.test \
   ltl2dstar2.test \
   randtgba.test \
