--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -1,6 +1,6 @@
 ## -*- coding: utf-8 -*-
-## Copyright (C) 2008, 2009, 2010, 2011, 2012, 2013 Laboratoire de
-## Recherche et Développement de l'Epita (LRDE).
+## Copyright (C) 2008, 2009, 2010, 2011, 2012, 2013, 2014 Laboratoire
+## de Recherche et Développement de l'Epita (LRDE).
 ## Copyright (C) 2003, 2004, 2005 Laboratoire d'Informatique de Paris
 ## 6 (LIP6), département Systèmes Répartis Coopératifs (SRC),
 ## Université Pierre et Marie Curie.
@@ -53,6 +53,7 @@ tgbaalgos_HEADERS = \
   magic.hh \
   minimize.hh \
   neverclaim.hh \
+  nondet.hh \
   postproc.hh \
   powerset.hh \
   projrun.hh \
@@ -102,6 +103,7 @@ libtgbaalgos_la_SOURCES = \
   minimize.cc \
   ndfs_result.hxx \
   neverclaim.cc \
+  nondet.cc \
   postproc.cc \
   powerset.cc \
   projrun.cc \
