Add ndfs and fix bug!
* iface/dve2/dve2check.cc: Call for Wrapper.
* iface/dve2fasttgba/dve2.cc: Implement BA.
* iface/dve2fasttgba/dve2.hh Fix it.
* iface/dve2fasttgba/dve2check.cc: Remove bad behaviour.
* src/fasttgbaalgos/ec/opt/Makefile.am: Add new file
* src/fasttgbaalgos/ec/opt/opt_ndfs.cc: New file.
* src/fasttgbaalgos/ec/opt/opt_ndfs.hh: New File.
* src/fasttgbaalgos/ec/unioncheck.cc: Bug fix.

--- a/src/fasttgbaalgos/ec/opt/Makefile.am
+++ b/src/fasttgbaalgos/ec/opt/Makefile.am
@@ -24,9 +24,11 @@ optdir = $(pkgincludedir)/fasttgbaalgos/ec/opt
 
 opt_HEADERS = \
   opt_tarjan_scc.hh \
-  opt_dijkstra_scc.hh
+  opt_dijkstra_scc.hh \
+  opt_ndfs.hh
 
 noinst_LTLIBRARIES = libopt.la
 libopt_la_SOURCES = \
   opt_tarjan_scc.cc \
-  opt_dijkstra_scc.cc
+  opt_dijkstra_scc.cc \
+  opt_ndfs.cc
