More statistics about SCC + Remove trivial Buchi Livelock
* src/taalgos/Makefile.am: Add files
* src/taalgos/ta_scc_map.hh: More Infos.
* src/taalgos/ta_scc_map.cc: Implem

--- a/src/taalgos/Makefile.am
+++ b/src/taalgos/Makefile.am
@@ -30,6 +30,7 @@ taalgos_HEADERS = \
   stats.hh \
   statessetbuilder.hh \
   minimize.hh \
+  ta_scc_map.hh \
   emptinessta.hh
 
 noinst_LTLIBRARIES = libtaalgos.la
@@ -40,4 +41,5 @@ libtaalgos_la_SOURCES = \
   stats.cc \
   statessetbuilder.cc \
   minimize.cc \
+  ta_scc_map.cc \
   emptinessta.cc
