Propagate use of graph into TA.
* src/graph/graph.hh
* src/ta/Makefile.am
* src/ta/fwd.hh
* src/ta/ta.hh
* src/ta/taexplicit.cc
* src/ta/taexplicit.hh
* src/ta/taproduct.cc
* src/ta/taproduct.hh
* src/ta/tgtaexplicit.cc
* src/ta/tgtaexplicit.hh
* src/taalgos/dotty.cc
* src/taalgos/minimize.cc
* src/taalgos/minimize.hh
* src/taalgos/tgba2ta.cc
* src/taalgos/tgba2ta.hh
* wrap/python/spot.i

--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -23,6 +23,7 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 tadir = $(pkgincludedir)/ta
 
 ta_HEADERS = \
+  fwd.hh \
   ta.hh \
   taexplicit.hh \
   taproduct.hh \
