bidigraph: implement digraph with multiple bins of states
* src/Makefile.am, src/graphtest/Makefile.am, src/graph/Makefile.am,
src/graphtest/defs.in: Update it.
* src/graph/bidigraph.cc,
src/graph/bidigraph.hh, src/graphtest/bidigraph.cc,
src/graphtest/bidigraph.test: New files.  Each bin represents states
with a certain in and out degree value.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,6 +35,7 @@ libspot_la_LDFLAGS = $(BUDDY_LDFLAGS) -no-undefined
 libspot_la_LIBADD =  \
   dstarparse/libdstarparse.la \
   hoaparse/libhoaparse.la \
+  graph/libgraph.la \
   kripke/libkripke.la \
   kripkeparse/libkripkeparse.la \
   ltlast/libltlast.la \
