fas: implement a feedback arc-set algorithm
* src/tgbaalgos/Makefile.am src/tgbatest/Makefile.am:  Update.
* src/tgbaalgos/fas.cc, src/tgbaalgos/fas.hh, src/tgbatest/fas.cc,
src/tgbatest/fas.test: New files.  Find order on states to find a small
but not minimal feedback arc-set.

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -42,6 +42,7 @@ tgbaalgos_HEADERS = \
   dupexp.hh \
   emptiness.hh \
   emptiness_stats.hh \
+  fas.hh \
   gv04.hh \
   hoa.hh \
   isdet.hh \
@@ -93,6 +94,7 @@ libtgbaalgos_la_SOURCES = \
   dtgbasat.cc \
   dupexp.cc \
   emptiness.cc \
+  fas.cc \
   gv04.cc \
   hoa.cc \
   isdet.cc \
