Add support for weighted automata
* src/tests/.gitignore, src/tests/Makefile.am,
src/tests/weighted.cc, src/tests/weighted.test,
src/twa/Makefile.am, src/twa/waut.hh,
src/twa/wautgraph.hh, src/twaalgos/Makefile.am,
src/twaalgos/weighted_ec.hh: here.
* src/sanity/style.test: Remove useless before c++11 restrictions

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -63,7 +63,8 @@ check_PROGRAMS = \
   tgbagraph \
   tostring \
   tunabbrev \
-  tunenoform
+  tunenoform \
+  weighted
 
 # Keep this sorted alphabetically.
 acc_SOURCES = acc.cc
@@ -110,6 +111,8 @@ tunabbrev_SOURCES = equalsf.cc
 tunabbrev_CPPFLAGS = $(AM_CPPFLAGS) -DTUNABBREV
 tunenoform_SOURCES = equalsf.cc
 tunenoform_CPPFLAGS = $(AM_CPPFLAGS) -DNENOFORM -DTUNABBREV
+weighted_SOURCES = weighted.cc
+weighted_CPPFLAGS = $(AM_CPPFLAGS) -DNENOFORM -DTUNABBREV
 
 
 # Keep this sorted by STRENGTH.  Test basic things first,
@@ -242,7 +245,8 @@ TESTS_twa = \
   ltlcross2.test \
   complementation.test \
   randpsl.test \
-  cycles.test
+  cycles.test \
+  weighted.test
 
 EXTRA_DIST = $(TESTS)
 
