Single ingoing state computation.
* src/fasttgbaalgos/ec/ingoing.cc,
src/fasttgbaalgos/ec/ingoing.hh,
iface/dve2fasttgba/dve2check.cc,
src/fasttgbaalgos/ec/Makefile.am: here.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -32,6 +32,7 @@ ec_HEADERS = \
   lowlink_stack.hh \
   root_stack.hh \
   stats.hh \
+  ingoing.hh \
   tarjan_scc.hh \
   unioncheck.hh \
   union_scc.hh
@@ -42,6 +43,7 @@ libec_la_SOURCES = \
   dijkstra_scc.cc \
   lazycheck.cc \
   stats.cc \
+  ingoing.cc \
   tarjan_scc.cc \
   unioncheck.cc \
   union_scc.cc \
