--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -97,7 +97,8 @@ check_PROGRAMS = \
   core/tgbagraph \
   core/tostring \
   core/tunabbrev \
-  core/tunenoform
+  core/tunenoform \
+  core/twacube
 
 # Keep this sorted alphabetically.
 core_acc_SOURCES = core/acc.cc
@@ -146,6 +147,7 @@ core_tunabbrev_SOURCES = core/equalsf.cc
 core_tunabbrev_CPPFLAGS = $(AM_CPPFLAGS) -DUNABBREV='"^ieFG"'
 core_tunenoform_SOURCES = core/equalsf.cc
 core_tunenoform_CPPFLAGS = $(AM_CPPFLAGS) -DNENOFORM -DUNABBREV='"^ieFG"'
+core_twacube_SOURCES = core/twacube.cc
 
 
 TESTS_tl = \
@@ -291,8 +293,8 @@ TESTS_twa = \
   core/complementation.test \
   core/randpsl.test \
   core/cycles.test \
-  core/acc_word.test
-
+  core/acc_word.test \
+  core/twacube.test
 
 ############################## PYTHON ##############################
 
