Design architecture for POR.
* iface/ltsmin/Makefile.am, iface/ltsmin/dfs_stats.hh,
iface/ltsmin/ltsmin.cc, iface/ltsmin/ltsmin.hh,
iface/ltsmin/modelcheck.cc, iface/ltsmin/porinfos.cc,
iface/ltsmin/porinfos.hh, iface/ltsmin/proviso.cc,
iface/ltsmin/proviso.hh, iface/ltsmin/spins.hh,
src/misc/timer.hh, src/twa/twa.hh,
src/twaalgos/reachiter.cc,
src/twaalgos/reachiter.hh: here.

--- a/iface/ltsmin/Makefile.am
+++ b/iface/ltsmin/Makefile.am
@@ -23,13 +23,13 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 ltsmindir = $(pkgincludedir)/iface/ltsmin
 
-ltsmin_HEADERS = ltsmin.hh
+ltsmin_HEADERS = spins.hh ltsmin.hh dfs_stats.hh proviso.hh porinfos.hh
 
 lib_LTLIBRARIES = libspotltsmin.la
 libspotltsmin_la_LIBADD = \
   $(top_builddir)/src/libspot.la \
   $(top_builddir)/ltdl/libltdlc.la -lpthread
-libspotltsmin_la_SOURCES = ltsmin.cc
+libspotltsmin_la_SOURCES = ltsmin.cc proviso.cc porinfos.cc
 
 noinst_PROGRAMS = modelcheck
 
