Rewrite stats DFS and source provoisos.
* iface/ltsmin/Makefile.am, iface/ltsmin/dfs_inspector.hh,
iface/ltsmin/dfs_stats.hh, iface/ltsmin/ltsmin.cc,
iface/ltsmin/modelcheck.cc, iface/ltsmin/proviso.cc,
iface/ltsmin/proviso.hh, src/twa/twa.hh: here.

--- a/iface/ltsmin/Makefile.am
+++ b/iface/ltsmin/Makefile.am
@@ -23,7 +23,8 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 ltsmindir = $(pkgincludedir)/iface/ltsmin
 
-ltsmin_HEADERS = spins.hh ltsmin.hh dfs_stats.hh proviso.hh porinfos.hh
+ltsmin_HEADERS = spins.hh ltsmin.hh dfs_inspector.hh \
+dfs_stats.hh proviso.hh porinfos.hh
 
 lib_LTLIBRARIES = libspotltsmin.la
 libspotltsmin_la_LIBADD = \
