convert: BDD to cube conversions
* README, configure.ac, spot/Makefile.am,
spot/twacube_algos/Makefile.am, spot/twacube_algos/convert.cc
spot/twacube_algos/convert.hh, tests/core/cube.cc,
tests/core/cube.test: here.

--- a/spot/twacube_algos/Makefile.am
+++ b/spot/twacube_algos/Makefile.am
@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
-## Copyright (C) 2009, 2010, 2012, 2013, 2014, 2015, 2016 Laboratoire
+## Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Laboratoire
 ## de Recherche et Développement de l'Epita (LRDE).
 ## Copyright (C) 2003, 2004 Laboratoire d'Informatique de Paris 6 (LIP6),
 ## département Systèmes Répartis Coopératifs (SRC), Université Pierre
@@ -20,32 +20,13 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-AUTOMAKE_OPTIONS = subdir-objects
+AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) $(BUDDY_CPPFLAGS)
+AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
-# List directories in the order they must be built.  Keep tests at the
-# end, after building '.' (since the current directory contains
-# libspot.la needed by the tests)
-SUBDIRS = misc priv tl graph twa twacube twaalgos ta taalgos kripke	\
-          twacube_algos parseaut parsetl . ltsmin
+twacube_algosdir = $(pkgincludedir)/twacube_algos
 
-lib_LTLIBRARIES = libspot.la
-libspot_la_SOURCES =
-libspot_la_LDFLAGS = $(BUDDY_LDFLAGS) -no-undefined $(SYMBOLIC_LDFLAGS)
-libspot_la_LIBADD =  \
-  kripke/libkripke.la \
-  misc/libmisc.la \
-  parseaut/libparseaut.la \
-  parsetl/libparsetl.la \
-  priv/libpriv.la \
-  taalgos/libtaalgos.la \
-  ta/libta.la \
-  tl/libtl.la \
-  twaalgos/libtwaalgos.la \
-  twa/libtwa.la \
-  twacube_algos/libtwacube_algos.la \
-  twacube/libtwacube.la \
-  ../lib/libgnu.la
+twacube_algos_HEADERS =  convert.hh
 
-# Dummy C++ source to cause C++ linking.
-nodist_EXTRA_libspot_la_SOURCES = _.cc
-_.cc:; touch $@
+noinst_LTLIBRARIES = libtwacube_algos.la
+libtwacube_algos_la_SOURCES = \
+   convert.cc
