--- a/configure.ac
+++ b/configure.ac
@@ -191,6 +191,7 @@ AC_CONFIG_FILES([
   bench/ltlclasses/Makefile
   bench/ltl2tgba/Makefile
   bench/ltl2tgba/defs
+  bench/product_n/Makefile
   bench/spin13/Makefile
   bench/wdba/Makefile
   bench/stutter/Makefile
@@ -225,6 +226,7 @@ AC_CONFIG_FILES([
 AC_CONFIG_FILES([doc/org/g++wrap], [chmod +x doc/org/g++wrap])
 AC_CONFIG_FILES([doc/dot], [chmod +x doc/dot])
 AC_CONFIG_FILES([tests/run], [chmod +x tests/run])
+AC_CONFIG_FILE([bench/product_n/run], [chmod +x bench/product_n/run])
 AC_OUTPUT
 
 case $VERSION:$enable_devel in
