Add n-ary product for twa
* python/spot/impl.i: Add bindings for twa_graph_ptr.
* spot/twaalgos/product.cc: Add product_n implementation.
* spot/twaalgos/product.hh: Add product_n interface.
* tests/python/product_n.py: Add tests for product_n.
* tests/Makefile.am: Add it.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -319,6 +319,7 @@ TESTS_python = \
   python/otfcrash.py \
   python/parsetgba.py \
   python/prodexpt.py \
+  python/product_n.py \
   python/randgen.py \
   python/relabel.py \
   python/remfin.py \
