--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,10 @@ SUBDIRS = buddy lib ltdl spot bin tests $(PYTHON_SUBDIR) doc $(NEVER_SUBDIRS)
 UTF8 = utf8/doc/ReleaseNotes utf8/doc/utf8cpp.html utf8/utf8.h	\
   utf8/utf8/checked.h utf8/utf8/core.h utf8/utf8/unchecked.h
 
+nobase_include_HEADERS= bricks/brick-assert.h bricks/brick-bitlevel.h \
+	bricks/brick-hash.h bricks/brick-hashset.h  bricks/brick-shmem.h \
+	bricks/brick-types.h
+
 DEBIAN =					\
   debian/changelog				\
   debian/changelog.in				\
